# car-wash-booking-app

./: .gitignore  package.json  render.yaml  vercel.json
frontend/: index.html  package-lock.json  package.json
frontend/public/: manifest.json  sw.js
frontend/src/: AdminView.tsx  App.css  App.tsx  LoginView.tsx  MyBookingsView.tsx  config.ts
hw2_panda/: package.xml
hw2_panda/config/: controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  panda.srdf
hw2_panda/launch/: hw2.launch.py  moveit_rviz.launch.py
hw2_panda/scripts/: color_detector.py  pick_and_place.py
hw2_panda/urdf/: panda_with_camera.urdf.xacro
hw2_panda/worlds/: hw2_world.sdf
server/: index.js  init-db.js  package-lock.json  package.json  test-api.js  verify.js
